--- a/beymen-clone/package.json
+++ b/beymen-clone/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.x.x",
+    "bootstrap-icons": "^1.13.1",
+    "bootstrap-vue-next": "^0.40.6",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.0",
-    "bootstrap": "^5.x.x",
-    "bootstrap-vue-next": "^0.x.x"
+    "vue-router": "^4.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
